methods.slug.SlugSnail.scala.error
Compilation error:
SlugSnail:14: error: ':' expected but ')' found.
def isFacingTrail(Color):Boolean = {
                       ^SlugSnail:33: error: identifier expected but '}' found.
}
^